<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_KFE_RIX_VAC" Id="{d38b3a8d-c2e8-4a67-9aeb-873e21370c76}">
    <Declaration><![CDATA[VAR_GLOBAL

// MKS275 Gauges

{attribute 'pytmc' := ' pv: PC1K1:ZOS:GPI:1 '}
fb_PC1K1_ZOS_GPI_1 : FB_MKS275;
{attribute 'pytmc' := ' pv: MR1K2:SWITCH:GPI:1 '}
fb_MR1K2_SWITCH_GPI_1 : FB_MKS275;
{attribute 'pytmc' := ' pv: TV1K1:PLEG:GPI:1 '}
fb_TV1K1_PLEG_GPI_1 : FB_MKS275;
{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:= TIID^Device 1 (EtherCAT)^B950_100H1_WALL (EK1100)^Term 119 (EL3174)^AI Standard Channel 2^Value'}
{attribute 'pytmc' := ' pv: SL1K2:EXIT:GPI:1 '}
fb_SL1K2_EXIT_GPI_1 : FB_MKS275;
{attribute 'pytmc' := ' pv: MR2K2:FLAT:GPI:1 '}
fb_MR2K2_FLAT_GPI_1 : FB_MKS275;
{attribute 'pytmc' := ' pv: MR3K2:KBH:GPI:1 '}
fb_MR3K2_KBH_GPI_1 : FB_MKS275;
{attribute 'pytmc' := ' pv: MR4K2:KBV:GPI:1 '}
fb_MR4K2_KBV_GPI_1 : FB_MKS275;
{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:= TIIB[Term 170 (EL3174-0002)]^AI Standard Channel 1^Value'}
{attribute 'pytmc' := ' pv: SP1K2:PAX:GPI:1 '}
fb_SP1K2_PAX_GPI_1 : FB_MKS275;
{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:= TIIB[Term 170 (EL3174-0002)]^AI Standard Channel 3^Value'}
{attribute 'pytmc' := ' pv: SP1K2:PAX:GPI:2 '}
fb_SP1K2_PAX_GPI_2 : FB_MKS275;
{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:= TIIB[EL3174_05_11]^AI Standard Channel 1^Value'}
{attribute 'pytmc' := ' pv: IM5K2:PPM:GPI:1 '}
fb_IM5K2_PPM_GPI_1 : FB_MKS275;


//New Superbee piranis
{attribute 'pytmc' := ' pv: TM2K2:ATM:GPI:1 '}
fb_TM2K2_ATM_GPI_1 : FB_MKS275;

{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:= TIIB[Box 256 (EP3174-0002)]^AI Standard Channel 3^Value'}
{attribute 'pytmc' := ' pv: AT3K2:SOLID:GPI:1 '}
fb_AT3K2_SOLID_GPI_1 : FB_MKS275;


//MKS275 EP Gauges
{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:= TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^Box 111 (EP3174-0002)^AI Standard Channel 2^Value'}
{attribute 'pytmc' := ' pv: ST1K2:PPS:GPI:1 '}
fb_ST1K2_PPS_GPI_1 : FB_MKS275;

// MKS500 Gauges

{attribute 'pytmc' := ' pv: PC1K1:ZOS:GCC:1 '}
fb_PC1K1_ZOS_GCC_1 : FB_MKS500;
{attribute 'pytmc' := ' pv: MR1K2:SWITCH:GCC:1 '}
fb_MR1K2_SWITCH_GCC_1 : FB_MKS500;
{attribute 'pytmc' := ' pv: TV1K1:PLEG:GCC:1 '}
fb_TV1K1_PLEG_GCC_1 : FB_MKS500;

{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIID^Device 1 (EtherCAT)^B950_100H1_WALL (EK1100)^Term 119 (EL3174)^AI Standard Channel 1^Value;
                                 .i_xHV_ON	    :=	TIID^Device 1 (EtherCAT)^B950_100H1_WALL (EK1100)^Term 123 (EL1124)^Channel 1^Input;
                                 .i_xDisc_Active:=	TIID^Device 1 (EtherCAT)^B950_100H1_WALL (EK1100)^Term 123 (EL1124)^Channel 2^Input;
                                 .q_xHV_DIS		:= 	TIID^Device 1 (EtherCAT)^B950_100H1_WALL (EK1100)^Term 118 (EL2624)^Channel 1^Output	'}
{attribute 'pytmc' := ' pv: SL1K2:EXIT:GCC:1 '}
fb_SL1K2_EXIT_GCC_1 : FB_MKS500;
{attribute 'pytmc' := ' pv: MR2K2:FLAT:GCC:1 '}
fb_MR2K2_FLAT_GCC_1 : FB_MKS500;
{attribute 'pytmc' := ' pv: IM2K2:PPM:GCC:1 '}
fb_IM2K2_PPM_GCC_1 : FB_MKS500;
{attribute 'pytmc' := ' pv: MR3K2:KBH:GCC:1 '}
fb_MR3K2_KBH_GCC_1 : FB_MKS500;
{attribute 'pytmc' := ' pv: IM3K2:PPM:GCC:1 '}
fb_IM3K2_PPM_GCC_1 : FB_MKS500;
{attribute 'pytmc' := ' pv: MR4K2:KBV:GCC:1 '}
fb_MR4K2_KBV_GCC_1 : FB_MKS500;
{attribute 'pytmc' := ' pv: IM4K2:PPM:GCC:1 '}
fb_IM4K2_PPM_GCC_1 : FB_MKS500;
{attribute 'pytmc' := ' pv: IM5K2:PPM:GCC:1 '}
fb_IM5K2_PPM_GCC_1 : FB_MKS500;
{attribute 'pytmc' := ' pv: TM2K2:K2B:GCC:1 '}
fb_TM2K2_K2B_GCC_1 : FB_MKS500;
{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[Term 170 (EL3174-0002)]^AI Standard Channel 2^Value;
                                 .i_xHV_ON	    :=	TIIB[Term 172 (EL1124)]^Channel 1^Input;
                                 .i_xDisc_Active:=	TIIB[Term 172 (EL1124)]^Channel 2^Input;
                                 .q_xHV_DIS		:= 	TIIB[Term 167 (EL2624)]^Channel 2^Output'}
{attribute 'pytmc' := ' pv: SP1K2:PAX:GCC:1 '}
fb_SP1K2_PAX_GCC_1 : FB_MKS500;

//New Televac gauge
{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[Term 170 (EL3174-0002)]^AI Standard Channel 4^Value;
                              .q_xHV_DIS		:= 	TIIB[Term 167 (EL2624)]^Channel 1^Output'}
{attribute 'pytmc' := ' pv: SP1K2:PAX:GCC:2 '}
fb_SP1K2_PAX_GCC_2 : FB_MX7M;

//MKS500 EP Gauges
{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^Box 111 (EP3174-0002)^AI Standard Channel 1^Value;
                             .q_xHV_DIS		:= 	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^K2S2-DRL-01 (EP2624-0002)^Channel 1^Output	'}
{attribute 'pytmc' := ' pv: ST1K2:PPS:GCC:1 '}
fb_ST1K2_PPS_GCC_1 : FB_MKS500;

{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[Box 256 (EP3174-0002)]^AI Standard Channel 2^Value;
                             .q_xHV_DIS		:= 	TIIB[Box 257 (EP2624-0002)]^Channel 1^Output'}
{attribute 'pytmc' := ' pv: AT3K2:SOLID:GCC:1 '}
fb_AT3K2_SOLID_GCC_1 : FB_MKS500;

//MKS972B Combo Gauges

{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[Box 256 (EP3174-0002)]^AI Standard Channel 4^Value'}
{attribute 'pytmc' :=' pv: SP2K2:TXAS:GCP:1 '}
fb_SP2K2_TXAS_GCP_1 : FB_972;


// MKS422
{attribute 'pytmc' := ' pv: TV4K2:GFS:1 '}
fb_TV4K2_GFS_1 : FB_MKS422;


// VGC Valves

{attribute 'pytmc' := ' pv: MR1K2:SWITCH:VGC:1 '}
fb_MR1K2_SWITCH_VGC_1 : FB_VGC;
{attribute 'pytmc' := ' pv: MR1K2:SWITCH:VGC:2 '}
fb_MR1K2_SWITCH_VGC_2 : FB_VGC;

{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIID^Device 1 (EtherCAT)^B950_100H1_WALL (EK1100)^Term 120 (EL1004)^Channel 1^Input;
                                 .i_xClsLS	:=	TIID^Device 1 (EtherCAT)^B950_100H1_WALL (EK1100)^Term 120 (EL1004)^Channel 2^Input;
                                .q_xOPN_DO	:=	TIID^Device 1 (EtherCAT)^B950_100H1_WALL (EK1100)^Term 121 (EL2004)^Channel 1^Output'}
{attribute 'pytmc' := ' pv: SL1K2:EXIT:VGC:1 '}
fb_SL1K2_EXIT_VGC_1 : FB_VGC;
{attribute 'pytmc' := ' pv: MR2K2:FLAT:VGC:1 '}
fb_MR2K2_FLAT_VGC_1 : FB_VGC;
{attribute 'pytmc' := ' pv: MR2K2:FLAT:VGC:2 '}
fb_MR2K2_FLAT_VGC_2 : FB_VGC;
{attribute 'pytmc' := ' pv: MR3K2:KBH:VGC:1 '}
fb_MR3K2_KBH_VGC_1 : FB_VGC;
{attribute 'pytmc' := ' pv: MR3K2:KBH:VGC:2 '}
fb_MR3K2_KBH_VGC_2 : FB_VGC;
{attribute 'pytmc' := ' pv: MR4K2:KBV:VGC:1 '}
fb_MR4K2_KBV_VGC_1 : FB_VGC;
{attribute 'pytmc' := ' pv: MR4K2:KBV:VGC:2 '}
fb_MR4K2_KBV_VGC_2 : FB_VGC;
{attribute 'pytmc' := ' pv: LI3K2:K2B:VWC:1 '}
fb_LI3K2_K2B_VWC_1 : FB_VGC;
{attribute 'TcLinkTo' := 	'.i_xOpnLS		 :=	TIIB[EL1004_05_01]^Channel 3^Input;
                                 .i_xClsLS	 := TIIB[EL1004_05_01]^Channel 4^Input ;
                                 .q_xOPN_DO  := TIIB[EL2004_05_02]^Channel 2^Output'}
{attribute 'pytmc' := ' pv: LI2K2:K2A:VWC:1 '}
fb_LI2K2_K2A_VWC_1 : FB_VGC;

// VGC EP Valves
{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^Box 110 (EP2338-0002)^Channel 1^Input;
                                 .i_xClsLS	:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^Box 110 (EP2338-0002)^Channel 2^Input;
                                .q_xOPN_DO	:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^Box 110 (EP2338-0002)^Channel 11^Output'}
{attribute 'pytmc' := ' pv: ST1K2:PPS:VGC:1 '}
fb_ST1K2_PPS_VGC_1 : FB_VGC;
{attribute 'TcLinkTo' := 	'.i_xOpnLS	:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^Box 110 (EP2338-0002)^Channel 5^Input;
                                 .i_xClsLS	:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^Box 110 (EP2338-0002)^Channel 6^Input;
                                .q_xOPN_DO	:=	TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 62 (EK1122)^Box 110 (EP2338-0002)^Channel 15^Output'}
{attribute 'pytmc' := ' pv: SP1K2:PAX:VGC:1 '}
fb_SP1K2_PAX_VGC_1 : FB_VGC;


//SP1K2 VRCs
{attribute 'pytmc' := ' pv: SP1K2:PAX:VRC:1 '}
{attribute 'TcLinkTo' := 	'.i_xOpnLS		 :=	TIIB[Term 157 (EL1004)]^Channel 1^Input;
                                 .i_xClsLS	 := TIIB[Term 157 (EL1004)]^Channel 2^Input ;
                                 .q_xOPN_DO  := TIIB[Term 158 (EL2004)]^Channel 1^Output'}
fb_SP1K2_PAX_VRC_1 : FB_VRC;
{attribute 'pytmc' := ' pv: SP1K2:PAX:VRC:2 '}
{attribute 'TcLinkTo' := 	'.i_xOpnLS		:=	TIIB[Term 157 (EL1004)]^Channel 3^Input;
                                 .i_xClsLS		:= TIIB[Term 157 (EL1004)]^Channel 4^Input ;
                                 .q_xOPN_DO	:= TIIB[Term 158 (EL2004)]^Channel 2^Output'}
fb_SP1K2_PAX_VRC_2 : FB_VRC;
{attribute 'pytmc' := ' pv: SP1K2:PAX:VRM:3 '}
{attribute 'TcLinkTo' := 	'.i_xOpnLS		:=	TIIB[Term 159 (EL1004)]^Channel 1^Input;
                                 .i_xClsLS		:= TIIB[Term 159 (EL1004)]^Channel 2^Input ;
                                 .q_xOPN_DO	:= TIIB[Term 158 (EL2004)]^Channel 3^Output'}
fb_SP1K2_PAX_VRM_3 : FB_VRC;
{attribute 'pytmc' := ' pv: SP1K2:PAX:VRC:4 '}
{attribute 'TcLinkTo' := 	'.i_xOpnLS		:=	TIIB[Term 169 (EL1004)]^Channel 1^Input;
                                 .i_xClsLS		:= TIIB[Term 169 (EL1004)]^Channel 2^Input ;
                                 .q_xOPN_DO	:= TIIB[Term 168 (EL2004)]^Channel 1^Output'}
fb_SP1K2_PAX_VRC_4 : FB_VRC;

{attribute 'pytmc' := ' pv: AT3K2:SOLID:VWC:01'}
{attribute 'TcLinkTo' := 	'.i_xOpnLS		:=	TIIB[K2S18_EL1004_E1]^Channel 1^Input;
                             .i_xClsLS		:= TIIB[K2S18_EL1004_E1]^Channel 2^Input ;
                             .q_xCLS_DO	:= TIIB[K2S18_EL2004_E2]^Channel 1^Output'}
fb_AT3K2_SOLID_VWC_01 : FB_VRC_NO_FFO;

//{attribute 'pytmc' := ' pv: SP1K2:PAX:VRC:5 '}
//{attribute 'TcLinkTo' := 	'.i_xOpnLS		:=	TIIB[Term 169 (EL1004)]^Channel 3^Input;
//                                .i_xClsLS		:= TIIB[Term 169 (EL1004)]^Channel 4^Input ;
//                                 .q_xOPN_DO	:= TIIB[Term 168 (EL2004)]^Channel 2^Output'}
//fb_SP1K2_PAX_VRC_5 : FB_VRC; (Not beign installed currently)

// PIP_Gamma Pumps

{attribute 'pytmc' := ' pv: PC1K1:ZOS:PIP:1 '}
fb_PC1K1_ZOS_PIP_1 : FB_PIP_GAMMA;
//{attribute 'pytmc' := ' pv: PC1K1:ZOS:PIP:2 '}
//fb_PC1K1_ZOS_PIP_2 : FB_PIP_GAMMA;
{attribute 'pytmc' := ' pv: MR1K2:SWITCH:PIP:1 '}
fb_MR1K2_SWITCH_PIP_1 : FB_PIP_GAMMA;
{attribute 'pytmc' := ' pv: TV1K1:PLEG:PIP:1 '}
fb_TV1K1_PLEG_PIP_1 : FB_PIP_GAMMA;
{attribute 'TcLinkTo' := 	'.i_iPRESS		:=	TIIB[B950_233_R02 (E3) (EL3064)]^AI Standard Channel 1^GVL_KFE_RIX_VAC.fb_ST1K2_PPS_PIP_1.i_iPRESS;
                                 .i_xSP_DI		:=  TIIB[B950_233_R02 (E4) (EL1004)]^Channel 1^GVL_KFE_RIX_VAC.fb_ST1K2_PPS_PIP_1.i_xSP_DI;
                                 .q_xHVEna_DO	:= TIIB[B950_233_R02 (E2) (EL2794)]^Channel 1^GVL_KFE_RIX_VAC.fb_ST1K2_PPS_PIP_1.q_xHVEna_DO'}
{attribute 'pytmc' := ' pv: ST1K2:PPS:PIP:1 '}
fb_ST1K2_PPS_PIP_1 : FB_PIP_GAMMA;

{attribute 'TcLinkTo' := 	'.i_iPRESS		:=	TIIB[Term 7 (EL3064)]^AI Standard Channel 1^Value;
                                 .i_xSP_DI		:=  TIIB[Term 8 (EL1004)]^Channel 1^Input;
                                 .q_xHVEna_DO	:= TIIB[Term 6 (EL2794)]^Channel 1^Output'}
{attribute 'pytmc' := ' pv: SL1K2:EXIT:PIP:1 '}
fb_SL1K2_EXIT_PIP_1 : FB_PIP_GAMMA;
{attribute 'pytmc' := ' pv: MR2K2:FLAT:PIP:1 '}
fb_MR2K2_FLAT_PIP_1 : FB_PIP_GAMMA;
{attribute 'pytmc' := ' pv: MR3K2:KBH:PIP:1 '}
fb_MR3K2_KBH_PIP_1 : FB_PIP_GAMMA;
{attribute 'pytmc' := ' pv: MR4K2:KBV:PIP:1 '}
fb_MR4K2_KBV_PIP_1 : FB_PIP_GAMMA;
{attribute 'pytmc' := ' pv: TV4K2:PIP:1 '}
fb_TV4K2_PIP_1 : FB_PIP_GAMMA;
{attribute 'pytmc' := ' pv: IM5K2:PPM:PIP:1 '}
fb_IM5K2_PPM_PIP_1 : FB_PIP_GAMMA;
{attribute 'pytmc' := ' pv: PA1K2:PIP:1 '}
fb_PA1K2_PIP_1 : FB_PIP_GAMMA;

{attribute 'pytmc' := ' pv: SP1K2:PAX:PIP:1 '}
{attribute 'TcLinkTo' := 	'.i_iPRESS		:= TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 53 (EL3064)^AI Standard Channel 2^Value ;
                               .q_xHVEna_DO 	:= TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 52 (EL2794)^Channel 2^Output ;
                               .i_xSP_DI		:= TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 45 (EK1521-0010)^Term 47 (EK1501-0010)^Term 54 (EL1004)^Channel 2^Input '}
fb_SP1K2_PAX_PIP_1 : FB_PIP_GAMMA;

//SIP PIP NexTORR Pumps
{attribute 'pytmc' := ' pv: IM2K2:PPM:PIP:1 '}
fb_IM2K2_PPM_PIP_1 : FB_PIP_SIP;
{attribute 'pytmc' := ' pv: IM3K2:PPM:PIP:1 '}
fb_IM3K2_PPM_PIP_1 : FB_PIP_SIP;
{attribute 'pytmc' := ' pv: IM4K2:PPM:PIP:1 '}
fb_IM4K2_PPM_PIP_1 : FB_PIP_SIP;
{attribute 'pytmc' := ' pv: LI2K2:K2A:PIP:1 '}
fb_LI2K2_K2A_PIP_1 : FB_PIP_SIP;
{attribute 'pytmc' := ' pv: SP2K2:TXAS:PIP:1 '}
fb_SP2K2_TXAS_PIP_1 : FB_PIP_SIP;


//PAX Turbo pumps (Pfeiffer turbo pumps TC400 *)

{attribute 'pytmc' := ' pv: SP1K2:PAX:PTM:1 '}
{attribute 'TcLinkTo' := 	'.i_xAtSpd		      := TIIB[Term 160 (EL1004)]^Channel 1^Input ;
                               .i_xRemote 	      := TIIB[Term 160 (EL1004)]^Channel 2^Input ;
                               .i_xFaultNC		  := TIIB[Term 160 (EL1004)]^Channel 3^Input;
                               .q_RunDO           := TIIB[Term 161 (EL2004)]^Channel 1^Output;
                               .q_xRemote         := TIIB[Term 161 (EL2004)]^Channel 2^Output ;
                               .q_PumpingStation  := TIIB[Term 161 (EL2004)]^Channel 3^Output'}
fb_SP1K2_PAX_PTM_01 : FB_PTM_Pfeiffer;
{attribute 'pytmc' := ' pv: SP1K2:PAX:PTM:2 '}
{attribute 'TcLinkTo' := 	'.i_xAtSpd		      := TIIB[Term 163 (EL1004)]^Channel 1^Input ;
                               .i_xRemote 	      := TIIB[Term 163 (EL1004)]^Channel 2^Input ;
                               .i_xFaultNC		  := TIIB[Term 163 (EL1004)]^Channel 3^Input;
                               .q_RunDO           := TIIB[Term 165 (EL2004)]^Channel 1^Output;
                               .q_xRemote         := TIIB[Term 165 (EL2004)]^Channel 2^Output ;
                               .q_PumpingStation  := TIIB[Term 165 (EL2004)]^Channel 3^Output'}
fb_SP1K2_PAX_PTM_02 : FB_PTM_Pfeiffer;

{attribute 'pytmc' := ' pv: LI3K2:K2B_OUT:PTM:01 '}
{attribute 'TcLinkTo' := 	'.i_xAtSpd		      := TIIB[EL1004_05_03]^Channel 1^Input ;
                               .i_xRemote 	      := TIIB[EL1004_05_03]^Channel 2^Input ;
                               .i_xFaultNC		  := TIIB[EL1004_05_03]^Channel 3^Input;
                               .q_RunDO           := TIIB[EL2004_05_04]^Channel 1^Output;
                               .q_xRemote         := TIIB[EL2004_05_04]^Channel 2^Output ;
                               .q_PumpingStation  := TIIB[EL2004_05_04]^Channel 3^Output'}
fb_LI3K2_K2B_OUT_PTM_01 : FB_PTM_Pfeiffer;


{attribute 'pytmc' := ' pv: LI4K2:K2B_OUT:PTM:01 '}
{attribute 'TcLinkTo' := 	'.i_xAtSpd		      := TIIB[K2S18 _EL1004_E4]^Channel 1^Input ;
                               .i_xRemote 	      := TIIB[K2S18 _EL1004_E4]^Channel 2^Input ;
                               .i_xFaultNC		  := TIIB[K2S18 _EL1004_E4]^Channel 3^Input;
                               .q_RunDO           := TIIB[K2S18_EL2004_E5]^Channel 1^Output;
                               .q_xRemote         := TIIB[K2S18_EL2004_E5]^Channel 2^Output ;
                               .q_PumpingStation  := TIIB[K2S18_EL2004_E5]^Channel 3^Output'}
fb_LI4K2_K2B_OUT_PTM_01 : FB_PTM_Pfeiffer;


//VFS

{attribute 'pytmc' := '		pv: TV1K2:VFS:1	'}
    {attribute 'TcLinkTo' := 	'.q_xPress_OK		:= 	TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance^FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xPress_OK;
                                    .q_xOPN_SW			:=  TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance^FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xOPN_SW;
                               .q_xCLS_SW			:=  TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance^FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xCLS_SW;
                             .q_xVAC_FAULT_Reset:= 	TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance^FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xVAC_FAULT_Reset;
                             .q_xOverrideMode	:= 	TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance^FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xOverrideMode;
                                 .q_xOverrideOpen	:= TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance^FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xOverrideOpen;
                                 .i_xTrigger		:=	TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance^FSTask Outputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.q_xTrigger;
                                 .i_xVFS_Open		:= TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance^FSTask Outputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.q_xVFS_Open;
                                 .i_xVFS_Closed		:=	TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance^FSTask Outputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.q_xVFS_Closed;
                             .i_xVAC_FAULT_OK	:=  TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance^FSTask Outputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.q_xVAC_FAULT_OK;
                             .i_xMPS_OK			:=  TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance^FSTask Outputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.q_xMPS_OK;
                             .i_eVFS_State		:=	TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance^FSTask Outputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.q_eVFS_State;
                                 .q_xVetoValveOpenDO := TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance^FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xVetoValveOpenDO;
                                 .q_xVetoValveClosed := TIPC^plc_kfe_rix_vac^plc_kfe_rix_vac Instance^FSTask Inputs^GVL_RIX_VAC_FS_DEVICES.fb_TV1K2_VFS_1.i_xVetoValveClosed	'}
fb_TV1K2_VFS_Interface : FB_VFS_Interface;


//Interface for KFE Valve - SP1K1-MONO-VGC-2
{attribute 'pytmc' :=' pv: PC1K1:ZOS:GCC:1:ILK'}
    st_RIX_ILK			:	ST_EXT_ILK;

    {attribute 'TcLinkTo' := 	'.q_xILK_OK_DO	:= TIID^Device 1 (EtherCAT)^Term 1 (EK1200)^Term 11 (EL2794)^Channel 1^Output '}

    fb_RIX_ILK			:	FB_EXT_ILK;


(*Pfeiffer serial*)
stPfeiffer_CTRL_SP1K2_PAX_PTM_01     : ARRAY[1..gcMaxPfeifferPumps] OF ST_PfeifferControl;
stPfeiffer_RBK_SP1K2_PAX_PTM_01      : ARRAY[1..gcMaxPfeifferPumps] OF ST_PfeifferStatus;
fbPfeifferCom_SP1K2_PAX_PTM_01       : FB_PFEIFFER_COM;

stPfeiffer_CTRL_SP1K2_PAX_PTM_02     : ARRAY[1..gcMaxPfeifferPumps] OF ST_PfeifferControl;
stPfeiffer_RBK_SP1K2_PAX_PTM_02      : ARRAY[1..gcMaxPfeifferPumps] OF ST_PfeifferStatus;
fbPfeifferCom_SP1K2_PAX_PTM_02       : FB_PFEIFFER_COM;

stPfeiffer_CTRL_LI3K2_PAX_PTM_01    : ARRAY[1..gcMaxPfeifferPumps] OF ST_PfeifferControl;
stPfeiffer_RBK_LI3K2_PAX_PTM_01      : ARRAY[1..gcMaxPfeifferPumps] OF ST_PfeifferStatus;
fbPfeifferCom_LI3K2_PAX_PTM_01       : FB_PFEIFFER_COM;

stPfeiffer_CTRL_LI4K2_PAX_PTM_01     : ARRAY[1..gcMaxPfeifferPumps] OF ST_PfeifferControl;
stPfeiffer_RBK_LI4K2_PAX_PTM_01      : ARRAY[1..gcMaxPfeifferPumps] OF ST_PfeifferStatus;
fbPfeifferCom_LI4K2_PAX_PTM_01       : FB_PFEIFFER_COM;


//// Connected to B950-310-WALL-W-DRL-02 (Mechanical Room )
{attribute 'pytmc' := ' pv: RIXS:PRO:01 '}
{attribute 'TcLinkTo' := '.q_xMPStart := TIIB[EL2794_03_03]^Channel 1^Output;
                          .q_xBPStart := TIIB[EL2794_03_03]^Channel 2^Output;
                          .i_xMPStatus := TIIB[EL1088_03_01]^Channel 1^Input;
                          .i_xBPStatus := TIIB[EL1088_03_01]^Channel 2^Input;
                          .i_xWarning := TIIB[EL1088_03_01]^Channel 3^Input;
                          .i_xAlarmOK := TIIB[EL1088_03_01]^Channel 4^Input;
                          .i_xRemote := TIIB (EL1088_03_01]^Channel 5^Input
'}
RIXS_PRO_01 : FB_EbaraDryPump;
{attribute 'pytmc' := ' pv: RIXS:ROUGH:GPI:01 '}
{attribute 'TcLinkTo' := 	'.i_iPRESS_R	:=	TIIB[EL3174-0002_03_07]^AI Standard Channel 4^Value'}
RIXS_ROUGH_GPI_01 : FB_MKS275;

//VRO
{attribute 'pytmc' := ' pv: RIXS:ROUGH:VRO:01 '}
{attribute 'TcLinkTo' := 	'.q_xOPN_DO	:=	TIIB[EL2212_03_04]^DOX Control Channel 1^Control^Output'}
RIXS_ROUGH_VRO_01 : FB_VVC;

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>