<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="FB_EXT_ILK" Id="{ca4d5861-2667-4bbb-94cc-70468202a0ba}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_EXT_ILK
VAR_INPUT
    VG	:	ST_VG;
END_VAR
VAR_IN_OUT
    ILK	:	ST_EXT_ILK;
END_VAR
VAR_OUTPUT
END_VAR
VAR
    q_xILK_OK_DO	 AT%Q*	:	BOOL; // Send the signal to indicate that the interlock pressure has been met.
END_VAR

]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Indicate that the interlock condition is met.
ILK.xIlkOK 			:= (VG.rPRESS < ILK.rPRO_SP) AND (VG.xPRESS_OK);
// Raise the output signal if the interlock condition is met AND the signal is enabled.
q_xILK_OK_DO		:= (VG.rPRESS < ILK.rPRO_SP) AND (VG.xPRESS_OK) AND (ILK.xIlk_sw);
// Se PV  indicating the output status
ILK.q_xILK_OK_DO	:= q_xILK_OK_DO;


]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>